--- a/pages CSS/signup.css
+++ b/pages CSS/signup.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-size: 1.09rem;
 }
 
 html, body {
@@ -30,6 +31,8 @@ img:hover{
     transform: scale(1.09);
 }
 
+
+
 .signup-wrap {
     width: 100%;
     max-width: 800px;
@@ -48,7 +51,7 @@ img:hover{
 
 .signup-card:hover{
     transform: scale(1.05);
-        box-shadow: 10px 18px 40px rgba(0, 0, 0, 0.35);
+    box-shadow: 10px 18px 40px rgba(0, 0, 0, 0.35);
 
 }
 
@@ -109,6 +112,14 @@ input {
     background: rgba(88, 68, 219, 0.036);
     color: rgba(255, 255, 255, 0.6);
     outline: none;
+}
+
+input:hover{
+    background-color: #9698e1;
+}
+
+input:focus {
+    background-color: #9699e18d;
 }
 
 input::placeholder {
