--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ img {
     border-radius: 10px;
     transform: translateY(-1px);
     transition: background 0.2s ease, transform 0.2s ease;
+    
 }
 
 .nav_center ul li {
@@ -297,7 +298,7 @@ img {
     align-items: center;
     justify-content: flex-start;
     min-height: 140px;
-    transition: transform 0.1s ease, box-shadow 0.18s ease;
+    transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
     box-shadow: 2px 2px 10px #000000;
 
 }
